--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -14,7 +14,7 @@
         </div>
     </form>
     <div class="border-top pt-3">
-        <small class="text-muted">Already have an account?<a href="">Login</a></small>
+        <small class="text-muted">Already have an account?<a href="{% url 'login' %}">Login</a></small>
     </div>
 </div>
 
