--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -22,13 +22,14 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarToggle">
             <div class="navbar-nav mr-auto">
-                {% comment %} {% if user.is_authenticated %} {% endcomment %}
+                {% if user.is_authenticated %}
               <a class="nav-item nav-link" href="{% url 'blog-home' %}">HOME</a>
               <a class="nav-item nav-link" href="{% url 'blog-about' %}">ABOUT</a>
             </div>
-        
+            <!-- Navbar Right Side -->
             <div class="navbar-nav">
-                <a href="#" id="auth-links">
+
+                <a href="{% url 'blog-new' %}" id="auth-links">
                 <span></span>
                 <span></span>
                 <span></span>
@@ -41,15 +42,15 @@
                 <span></span>
                 <span></span>
                 Profile
-            </a>            
-            <a href="{% url 'logout' %}" id="auth-links">
+            </a>
+                <a href="{% url 'logout' %}" id="auth-links">
                 <span></span>
                 <span></span>
                 <span></span>
                 <span></span>
                 Logout
             </a>
-                {% comment %} {% else %} {% endcomment %}
+                {% else %}
               <a href="{% url 'login' %}" id="auth-links">
                 <span></span>
                 <span></span>
@@ -64,7 +65,8 @@
                 <span></span>
                 Register
             </a>
-                {% comment %} {% endif %} {% endcomment %}
+
+                {% endif %}
             </div>
           </div>
         </div>
@@ -73,7 +75,7 @@
     <main role="main" class="container">
       <div class="row">
           <div class="col-md-8">
-              {%  if messages %}
+              {%  if messages%}
                 {% for message in messages %}
                     <div class="alert-{{ message.tags }}">
                         {{ message }}
@@ -81,45 +83,11 @@
                 {% endfor %}
               {% endif %}
           </div>
-        <div class="col-md-8">
+        <div class="col-md-12">
            {% block content %}{% endblock %}
         </div>
-        <div class="col-md-4">
-          <div class="content-sectionw">
 
-            <div class="d-flex flex-column align-items-stretch flex-shrink-0 bg-white" style="width: 380px;" style="padding-top: 120px;">
-                <a id="list-group" style="text-decoration: none;" href="" class="d-flex align-items-center flex-shrink-0 p-3 link-dark text-decoration-none border-bottom">
-                  <!-- <svg class="bi me-2" width="30" height="24"><use xlink:href="#bootstrap"/></svg> -->
-                  <span class="fs-5 fw-semibold" id="gist-btn">Latest Gist</span>
-                </a>
-                <div class="list-group list-group-flush border-bottom scrollarea">
-                  <a href="#" class="list-group-item list-group-item-action  lh-tight" aria-current="true">
-                    <div class="d-flex w-100 align-items-center justify-content-between">
-                      <strong class="mb-1">Seriously, Stop Trying to Teach Toddlers How to Code...By Desphixs
-                    </strong>
-                      <small>Wed</small>
-                    </div>
-                    <div class="col-10 mb-1 small">AS A BABY nerd, I was obsessed with Hackers. The 1995 cult movie... </div>
-                  </a>
-                  <a href="#" class="list-group-item list-group-item-action py-3 lh-tight">
-                    <div class="d-flex w-100 align-items-center justify-content-between">
-                      <strong class="mb-1">Its not a bug - It's a feature... by Desphixs</strong>
-                      <small class="text-muted">Tues</small>
-                    </div>
-                    <div class="col-10 mb-1 small">When it comes to coding, everything works like a miracle, let me use that word...hahaha</div>
-                  </a>
-                  <a href="#" class="list-group-item list-group-item-action py-3 lh-tight">
-                    <div class="d-flex w-100 align-items-center justify-content-between">
-                      <strong class="mb-1">I wanted to be a great programmer but...by Desphixs</strong>
-                      <small class="text-muted">Mon</small>
-                    </div>
-                    <div class="col-10 mb-1 small">in my family trait, nobody knows anything about computers and i wanted to be the greatest computer scientist ever and...</div>
-                  </a>
-
-                </div>
-              </div>
-          </div>
-        </div>
+       
       </div>
 
 
@@ -132,7 +100,6 @@
             <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">FAQs</a></li>
             <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">About</a></li>
           </ul>
-          <p class="text-center text-muted">&copy; Desphixs 2021</p>
         </footer>
 
     </main>
