--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -1,7 +1,7 @@
 {% extends 'blog/base.html' %}
 
 {% block content %}
-    <h1>Home Page!!!!!</h1>
+    <h1>MY BLOGS!!!!!</h1>
     <hr>
     {% for post in posts %}
         <article class="media content-section">
@@ -10,7 +10,7 @@
                 <a class="mr-2" href="#">{{ post.author }}</a>
                 <small class="text-muted">{{ post.date_posted }}</small>
               </div>
-              <h2><a class="article-title" href="#">{{ post.title }}</a></h2>
+              <h2><a class="article-title" href="{% url 'blog-detail' post.id %}">{{ post.title }}</a></h2>
               <p class="article-content">{{ post.content }}</p>
             </div>
             <br>
